--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,16 @@
     },
     "autoload": {
         "psr-4": {
+            
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+            
+        },
+        "files": [
+            "app/Helpers/WhatsappHelper.php"
+        ]
+        
     },
     "autoload-dev": {
         "psr-4": {
